fixed spacing on gradient

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 
 @media only screen and (max-width : 600px) {
   .css-selector {
+    position: relative;
     height: 88.3vh;
     background: linear-gradient(30deg, #4baaff, #032689, #000000, #087c1f);
     background-size: 100% 100%;
@@ -26,6 +27,7 @@
 }
 @media screen and (min-width:601px){
         .css-selector {
+        position: relative;
         height: 92.8vh;
         background: linear-gradient(30deg, #4baaff, #032689, #000000, #69e2ec);
         background-size: 400% 400%;
